spring-boot-server/spring-boot-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-boot-server
  labels:
    app: spring-boot-server
    version: "1.0"
spec:
  containers: 
  - name: spring-boot-server
    image: gaurav157243/spring-boot-server
