spring-boot-server/spring-boot-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boot-server-service
spec: 
  selector:
    app: boot-server
    version: "1.0"
  type: NodePort
  ports:  
    - name: http
      port: 9080 # The port that will be exposed by this service.
      targetPort: 9080 # Number or name of the port to access on the pods targeted by the service
      nodePort: 30080 # The port on each node on which this service is exposed when type=NodePort or LoadBalancer
